--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,9 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <title>ESBuild Template</title>
+    <title>Game of Life</title>
     <link rel="stylesheet" href="style.css" />
-    <link
-      rel="shortcut icon"
-      href="https://esbuild.github.io/favicon.svg"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <script defer src="./bundle.js"></script>
   </head>
   <body></body>
